tests/resources/valid/class/generics.mamba
# This class has no state
class MyClass2[C, A isa MyGeneric](def my_field: Int) isa MyType[A, C](my_field)
    def SOME_CONSTANT <- 3.5E20

    def constant_func(self) => 400
