tests/resources/invalid/type/definition/assign_to_inner_non_mut3.mamba
class A
    def mut c: C

class C
    def my_class: D := D()
    def my_field_accessor(self) -> D => self.my_class

class D
    def mut my_field: Int := 10

def mut a := A()
a.c.my_field_accessor().my_field := 20
